# starting-ragchatbot-codebase

./: CLAUDE.md  README.md  format.sh  frontend-changes.md  pyproject.toml  quality.sh
backend/: TEST_RESULTS_AND_FIXES.md  ai_generator.py  app.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
